--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
           Experience the AR by downloading the Arsenic app below.</p>
           <p class="store">
             <!-- <a href="http://www."><img src="assets/img/app-store.png" height="50" alt=""></a> -->
-            <a href="http://www."><img src="assets/img/google-play.png" height="50" alt=""></a>
+            <a href="https://drive.google.com/file/d/0B02x_Tux220SYUlNQzVRTHdHX0E/view"><img src="assets/img/google-play.png" height="50" alt=""></a>
           </p>
         </div>
         <div class="col-md-6">
-          <img src="assets/img/phone.png" class="img-responsive mt" alt="">
+          <img src="assets/img/bg.jpg" class="img-responsive mt" alt="">
         </div>
       </div><!--/row-->
     </div><!--/container-->
@@ -84,7 +84,7 @@
 
     <div class="container ptb">
       <div class="row centered">
-        <h2 class="mb"><br/>Scan the images below to see them come to life!</h2>
+        <h2 class="mb"><br/>Scan the images below with the app to see them come to life!</h2>
         <!-- <div class="col-md-4">
           <div class="price-table">
               <div class="p-head">
@@ -189,13 +189,13 @@
     </div><!--/container-->
     
 
-    <div id="green">
+     <!-- <div id="green">
       <div class="container">
         <div class="row">
           <center> <h2>Screenshots</h2> </center>
-        </div><!--/row-->
+        </div><!--/row
       </div><!--/container-->
-    </div><!--/green-->
+    <!-- </div> -->
 
     <div id="f">
       <div class="container">
