--- a/index.html
+++ b/index.html
@@ -158,26 +158,31 @@
               <div class="carousel-inner" >
                 <div class="item active"> 
                     <!-- image size is 255*255 pixels -->
-                  <img src="assets/img/ashish.gif">
+                  <img src="assets/img/nitesh.gif">
                       <div class="col-md-6 col-md-offset-30">
-                    <h2>Scan the images below with the app to see them come to life
-                        can the images below with the app to see them come to
-                        can the images below with the app to see them come to!</h2>
+                    <center><h3>Nitesh,Co-founder & CEO - Appeti</h3></center> <br>
+                    <h3>AR has the potential to change a range of consumer experiences. 
+                    Working closely with Arsenic team, we are planning to bring Augmented Reality in Foodtech industry.
+                    customer experience is a priority for us and AR can be a really good way to deliver nostalgia of 
+                    a place by bringing static prints to life.</h3>
                     </div></div>
                 <div class="item">
                     
-                  <img src="assets/img/ashish.gif">
+                  <img src="assets/img/narendra.gif">
                       <div class="col-md-6 col-md-offset-30 centered">
-                    <h2>Scan the images below with the app to see them come to life
-                        can the images below with the app to see them come to
-                        can the images below with the app to see them come to!</h2>
+                    <center><h3>Narendra,Director, CFO - Appeti</h3></center> <br>
+                    <h2>Innovations are the key to success. AR/VR is the future, the reason we chose AR for marketing is 
+                    because it does not requires investment in new hardware, everyone has a smartphone now a days.
+                    We are planning to connect AR with social life of people who come to our platform with a gifting mindset.</h2>
                     </div></div>
                 <div class="item">
-                 <img src="assets/img/ashish.gif">
+                 <img src="assets/img/satwik.gif">
                       <div class="col-md-6 col-md-offset-30 centered">
-                    <h2>Scan the images below with the app to see them come to life
-                        can the images below with the app to see them come to
-                        can the images below with the app to see them come to!</h2>
+                      <center><h3>Satwik, User - Appeti</h3></center> <br>
+                    <h2>Being a reguler customer of Appeti, I got a chance to access the beta of Arsenic app and the experience 
+                    was amazing, big things are possible using Augmented Reality! It can completely transform the way we shop and gift.
+                    Waiting eagerly for the app to launch in production.
+                    </h2>
                     </div></div>
                 <div class="item">
                   <img src="assets/img/ashish.gif">
